--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JadwalSholat</title>
-    <link rel="stylesheet" href="{{url for ('static',filename='style.css')}}">
+    <link href="{{ url_for('static', filename='styles/style.css') }}" rel="stylesheet" />
 </head>
-<body>
-    <p1></p1>
+    <p1>tes</p1>
 </body>
 </html>
