In progress html

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
     <title>Jadwal Sholat</title>
 </head>
-<body>
-    
+<body class="bg-white p-10 h-screen">
+  <div class="bg-orange-200	rounded-2xl h-full p-10">
+    <div class="flex flex-row items-center">
+        <div>JadwalSholat</div>
+    </div>
+    <div class="bg-orange-400 rounded-2xl h-full flex flex-col justify-end">
+        <div class="text-center">
+            <div class="mb-2 text-xl">Selasa, 04 Apr 2023</div>
+            <div class="mb-2 text-3xl font-bold">19:20</div>
+            <div class="mb-2 text-xl uppercase">Surabaya</div>
+        </div>
+        <div class="flex flex-row items-center">
+            <div class="bg-stone-200 px-6 py-8 rounded-md text-center flex-1 m-2">
+                <div class="text-lg font-bold">Shubuh</div>
+                <div class="text-3xl">4:16</div>
+            </div>
+            <div class="bg-stone-200 px-6 py-8 rounded-md text-center flex-1 m-2">
+                <div class="text-lg font-bold">Shubuh</div>
+                <div class="text-3xl">4:16</div>
+            </div>
+            <div class="bg-stone-200 px-6 py-8 rounded-md text-center flex-1 m-2">
+                <div class="text-lg font-bold">Shubuh</div>
+                <div class="text-3xl">4:16</div>
+            </div>
+            <div class="bg-stone-200 px-6 py-8 rounded-md text-center flex-1 m-2">
+                <div class="text-lg font-bold">Shubuh</div>
+                <div class="text-3xl">4:16</div>
+            </div>
+            <div class="bg-stone-200 px-6 py-8 rounded-md text-center flex-1 m-2">
+                <div class="text-lg font-bold">Shubuh</div>
+                <div class="text-3xl">4:16</div>
+            </div>
+          </div>
+    </div>
+  </div>
 </body>
 </html>
